2021.08.07 v.2.1.4
+ Added watched and purchased categories for viaplay.pl @Mariusz89B

2021.08.05 v.2.1.3
+ Added viaplay.pl @Mariusz89B @Zuzia-Dev
+ Added Polish translation @hevet
+ Added Swedish translation @Mariusz89B

2019.03.11 v.2.1.2
+ Fix channels listing on some subscriptions
+ Fix 'fallback' image is not always available

2018.02.21 v2.1.1
+ Fix parental control

2018.02.21 v2.1.0
+ New dependency: script.module.routing
+ Support for 4K streams and 5.1 audio
+ Fix audio bug on some sports streams (requires Kodi v18 Leia)
+ Channels section improvements
+ Code cleanup

2017.12.27 v2.0.1
+ Minor changes needed for approval in the official repository

2017.12.27 v2.0.0
+ New dependency: script.module.inputstreamhelper
+ Switch to registration code activation
+ Finally replace HLS with MPEG-DASH (Widevine DRM is now required)
+ Channels support (previously Viasat TV To Go)
+ Implement dynamically acquired 'theme pages' in addition to browsing through categories
+ Starred, Watched and Purchased pages now work
+ Open add-on settings on first run
+ Major rewrite and cleanup of the code
+ Big improvements all-around and a massively enhanced experience

2017.04.10 v1.0.8
+ Fix audio on newer Viaplay content
+ Fix icon/fanart
+ Move addon code to addon.py

2017.01.25 v1.0.7.1
+ Additional stream URL fix

2017.01.25 v1.0.7
+ Update for Krypton
+ Fix stream URL retrieval

2016.12.11 v1.0.6
+ Improve sports section
+ Fix broken playback for new content
+ Remove add-on debugging setting and automatically detect it instead
+ Code cleanup

2016.09.08 v1.0.5
+ Bug fix: possible UTC bug when determining game status
+ Bump required requests version to 2.9.1
+ Don't set watched status on sports content
+ Implement parental control
+ Add option to limit the max allowed bitrate
+ Code cleanup & refactoring

2016.08.31 v1.0.4
+ Remove dateutil dependency; add iso8601
+ Improve the sports section
+ Get better at catching exceptions
+ Use 'with' statement to open files
