@@ -16,7 +16,7 @@
       <description lang="nb_NO">Se innhold fra Viaplay.</description>
       <description lang="sv_SE">Titta på innehåll från Viaplay.</description>
 	  <description lang="pl_PL">Oglądaj treści z Viaplay.</description>
-      <news>2021.08.05 v.2.1.3[CR]+ Added viaplay.pl[CR]2021.08.07 v2.1.4[CR]+ Added watched and purchased categories for viaplay.pl
+      <news>2021.08.05 v.2.1.3[CR]+ Added viaplay.pl[CR]2021.08.07 v2.1.4[CR]+ Added watched and purchased categories for viaplay.pl[CR]+ Fixed category error
       </news>
       <platform>all</platform>
       <language>sv dk no fi en pl</language>
