@@ -1,5 +1,6 @@
 2021.08.07 v.2.1.4
 + Added watched and purchased categories for viaplay.pl @Mariusz89B
++ Fixed category error
 
 2021.08.05 v.2.1.3
 + Added viaplay.pl @Mariusz89B @Zuzia-Dev
